@@ -1,5 +1,6 @@
 Changelog for ghcid (* = breaking change)
 
+    #153, show errors/warnings to freshly edited files first
     #153, set -j
     #154, improve Ctrl-C behaviour and process termination during startup
     Require extra-1.6.6
